[Checkbox] Fix spacing

--- a/ellegant.css
+++ b/ellegant.css
@@ -470,7 +470,7 @@
   border-radius: 1em;
   border: none;
   position: relative;
-  top: -2px;
+  top: -1px;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
